# python_is_sports

./: README.md  get_data.py  is_sports.py  model.pkl  pyproject.toml  test_headlines  test_is_sports.sh  vectorizer.pkl
python_is_sports/: is_sports.py
